force-app/src/objects/c2g__codaTransactionLineItem__c.object
<CustomObject>
    <fields>
        <fullName>c2g__IncomeTaxType__c</fullName>
        <description>Income Tax Type</description>
        <label>Income Tax Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Rents</fullName>
                </value>
                <value>
                    <fullName>2 - Royalties</fullName>
                </value>
                <value>
                    <fullName>3 - Other Income</fullName>
                </value>
                <value>
                    <fullName>4 - Federal Income Tax Withheld</fullName>
                </value>
                <value>
                    <fullName>5 - Fishing Boat Proceeds</fullName>
                </value>
                <value>
                    <fullName>6 - Medical and Healthcare Payments</fullName>
                </value>
                <value>
                    <fullName>7 - Nonemployee Compensation</fullName>
                </value>
                <value>
                    <fullName>8 - Substitute Payments in Lieu of Dividends or Interest</fullName>
                </value>
                <value>
                    <fullName>9 - Payer Made Direct Sales of 5000 or More</fullName>
                </value>
                <value>
                    <fullName>10 - Crop Insurance Proceeds</fullName>
                </value>
                <value>
                    <fullName>11 - Unused 11</fullName>
                </value>
                <value>
                    <fullName>12 - Unused 12</fullName>
                </value>
                <value>
                    <fullName>13 - Excess Golden Parachute Payments</fullName>
                </value>
                <value>
                    <fullName>14 - Gross Proceeds Paid to an Attorney</fullName>
                </value>
                <value>
                    <fullName>Not Reportable</fullName>
                    <default>true</default>
                    <label>Not Reportable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__IntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Transfer</label>
        <referenceTo>c2g__codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__IsOutputVATTax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox identifies the tax line type i.e. Input VAT Tax or Output VAT Tax</description>
        <label>Is Output VAT Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__IsWithholdingTax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the Tax line item is a withholding tax line.</description>
        <label>Is Withholding Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__LastCustomerStatementDate__c</fullName>
        <label>Last Customer Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__LastReminderDate__c</fullName>
        <label>Last Reminder Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>c2g__LineDescription__c</fullName>
        <label>Line Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__LineNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Line Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__LineReference__c</fullName>
        <label>Line Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__LineType__c</fullName>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analysis</fullName>
                    <default>true</default>
                    <label>Analysis</label>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__LocalGLACurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local GLA Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Local GLA Currency)</relationshipLabel>
        <relationshipName>TransactionLineItemsLocalGLACurrency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__LocalGLAValue__c</fullName>
        <label>Local GLA Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__LocalGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Local GLA)</relationshipLabel>
        <relationshipName>TransactionLineItemsLocalGLA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__MatchingStatus__c</fullName>
        <label>Matching Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                    <label>Available</label>
                </value>
                <value>
                    <fullName>Matched</fullName>
                </value>
                <value>
                    <fullName>Not Matchable</fullName>
                </value>
                <value>
                    <fullName>Proposed</fullName>
                </value>
                <value>
                    <fullName>Proposed Void</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__MultiBookStatus__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MultiBookStatus</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OnHold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__OriginalAccount__c</fullName>
        <label>Original Account</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__OwningCurrencyRevaluation__c</fullName>
        <description>The ID of the Currency Revaluation (if any) which owns this transaction line.</description>
        <label>Owning Currency Revaluation</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__OwningDualCurrencyRevaluation__c</fullName>
        <description>The ID of the Dual Currency Revaluation (if any) which owns this transaction line.</description>
        <label>Owning Dual Currency Revaluation</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__OwningReportingCurrencyRevaluation__c</fullName>
        <description>The ID of the Reporting Currency Translation (if any) which owns this transaction line.</description>
        <label>Owning Reporting Currency Translation</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ProcessStatus__c</fullName>
        <label>Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Profit and Loss</fullName>
                </value>
                <value>
                    <fullName>Balance Sheet</fullName>
                </value>
                <value>
                    <fullName>Not Processed</fullName>
                    <default>true</default>
                    <label>Not Processed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ReportAdjustOperatingActivities__c</fullName>
        <formula>if(isblank(text(c2g__CashFlowCategory__c)), c2g__GeneralLedgerAccount__r.c2g__AdjustOperatingActivities__c,c2g__AdjustOperatingActivities__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This value is used to determine the final categorization of the transaction line item on the Statement of Cash Flows report.</inlineHelpText>
        <label>Report Reclassify Profits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ReportCashFlowCategory__c</fullName>
        <formula>if(isblank(text(c2g__CashFlowCategory__c)), text(c2g__GeneralLedgerAccount__r.c2g__CashFlowCategory__c), text(c2g__CashFlowCategory__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This value is used to determine the final categorization of the transaction line item on the Statement of Cash Flows report.</inlineHelpText>
        <label>Report Cash Flow Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ReportCashFlowLineSummary__c</fullName>
        <formula>if(isblank(text(c2g__CashFlowCategory__c)), text(c2g__GeneralLedgerAccount__r.c2g__CashFlowLineSummary__c), text(c2g__CashFlowLineSummary__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This value is used to determine the final categorization of the transaction line item on the Statement of Cash Flows report.</inlineHelpText>
        <label>Report Cash Flow Line Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ReportingCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the currency used by a company.</description>
        <label>Reporting Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipName>TransactionLineItemsReportingCurrency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ReportingOutstandingValue__c</fullName>
        <description>The outstanding value used to report up the company hierarchy.</description>
        <label>Reporting Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ReportingRate__c</fullName>
        <description>The rate used to report up the company hierarchy.</description>
        <label>Reporting Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ReportingValue__c</fullName>
        <description>The value used to report up the company hierarchy.</description>
        <label>Reporting Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ReverseChargeTaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reverse Charge Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Reverse Charge Tax Code)</relationshipLabel>
        <relationshipName>TransactionLineItemsReverseChargeTaxCode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Severity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Severity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__StatementDate__c</fullName>
        <formula>c2g__BankReconciliation__r.c2g__StatementDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Tax Code 1)</relationshipLabel>
        <relationshipName>TransactionLineItemsTC1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 2</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Tax Code 2)</relationshipLabel>
        <relationshipName>TransactionLineItemsTC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 3</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Tax Code 3)</relationshipLabel>
        <relationshipName>TransactionLineItemsTC3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxGroup__c</fullName>
        <label>Tax Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionDate__c</fullName>
        <formula>c2g__Transaction__r.c2g__TransactionDate__c</formula>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionReconciliationDate__c</fullName>
        <label>Transaction Reconciliation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionReconciliationStatus__c</fullName>
        <label>Transaction Reconciliation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Proposed</fullName>
                </value>
                <value>
                    <fullName>Reconciled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__TransactionReconciliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Reconciliation</label>
        <referenceTo>c2g__TransactionReconciliation__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Transaction__c</fullName>
        <label>Transaction Number</label>
        <referenceTo>c2g__codaTransaction__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Version__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffaws__Absolute_Home_Value__c</fullName>
        <description>The Field specifies the absolute value of the Home Value.</description>
        <formula>ABS( c2g__HomeValue__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Absolute Home Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffaws__CashEntryType__c</fullName>
        <description>The cash entry type for which the transaction was created.</description>
        <formula>TEXT( c2g__Transaction__r.c2g__CashEntry__r.c2g__Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash Entry Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffaws__Transaction_Type__c</fullName>
        <description>The type of transaction.</description>
        <formula>TEXT(c2g__Transaction__r.c2g__TransactionType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffaws__Vendor_Document_Number__c</fullName>
        <description>Vendor invoice number or vendor credit note number on the originating document.</description>
        <formula>c2g__Transaction__r.c2g__VendorDocumentNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Document Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffcmutil__AccValueVsAccount__c</fullName>
        <formula>ABS(c2g__AccountValue__c) -  ABS(c2g__AccountOutstandingValue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccValueVsAccount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffcmutil__CMHistoryCheckerProccessed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field populated when transaction line is already checked by Cash Matching History Checker</description>
        <label>Cash Matching History Checker Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffcmutil__DocValueVsDocument__c</fullName>
        <formula>ABS(c2g__DocumentValue__c) -  ABS(c2g__DocumentOutstandingValue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DocValueVsDocument</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffcmutil__DocumentNumber__c</fullName>
        <formula>c2g__Transaction__r.c2g__DocumentNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffcmutil__DocumentVsAccount__c</fullName>
        <formula>c2g__DocumentOutstandingValue__c - c2g__AccountOutstandingValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DocumentVsAccount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffcmutil__DocumentVsDual__c</fullName>
        <formula>c2g__DocumentOutstandingValue__c - c2g__DualOutstandingValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DocumentVsDual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffcmutil__DocumentVsHome__c</fullName>
        <formula>c2g__DocumentOutstandingValue__c - c2g__HomeOutstandingValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DocumentVsHome</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffcmutil__DualValueVsDual__c</fullName>
        <formula>ABS(c2g__DualValue__c) -  ABS(c2g__DualOutstandingValue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DualValueVsDual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffcmutil__HomeValueVsHome__c</fullName>
        <formula>ABS(c2g__HomeValue__c) -  ABS(c2g__HomeOutstandingValue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HomeValueVsHome</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Transaction Line Item</label>
    <listViews>
        <fullName>c2g__AutomatedEliminationEliminated</fullName>
        <columns>c2g__OwnerCompany__c</columns>
        <columns>c2g__Transaction__c</columns>
        <columns>NAME</columns>
        <columns>c2g__GeneralLedgerAccount__c</columns>
        <columns>c2g__EliminationTransaction__c</columns>
        <columns>c2g__LineType__c</columns>
        <columns>c2g__Account__c</columns>
        <columns>c2g__TransactionDate__c</columns>
        <columns>c2g__DocumentCurrency__c</columns>
        <columns>c2g__DocumentValue__c</columns>
        <columns>c2g__HomeValue__c</columns>
        <columns>c2g__DualValue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__EliminationTransaction__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Eliminated Transaction Line Items</label>
    </listViews>
    <listViews>
        <fullName>c2g__BankReconciliation</fullName>
        <columns>c2g__BankAccount__c</columns>
        <columns>c2g__BankAccountValue__c</columns>
        <columns>c2g__Account__c</columns>
        <columns>c2g__LineDescription__c</columns>
        <columns>c2g__BankReconciliation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__BankAccount__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>c2g__BankReconciliation__c</field>
            <operation>equals</operation>
        </filters>
        <label>Bank Reconciliation</label>
    </listViews>
    <listViews>
        <fullName>c2g__BankReconciliationAll</fullName>
        <columns>c2g__BankAccount__c</columns>
        <columns>c2g__BankAccountValue__c</columns>
        <columns>c2g__Account__c</columns>
        <columns>c2g__LineDescription__c</columns>
        <columns>c2g__BankReconciliation__c</columns>
        <columns>c2g__BankReconciliationStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__BankAccount__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Bank Reconciliation - All</label>
    </listViews>
    <listViews>
        <fullName>c2g__BankReconciliationAvailable</fullName>
        <columns>c2g__BankAccount__c</columns>
        <columns>c2g__BankAccountValue__c</columns>
        <columns>c2g__Account__c</columns>
        <columns>c2g__LineDescription__c</columns>
        <columns>c2g__BankReconciliation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__BankAccount__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>c2g__BankReconciliation__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>c2g__DateCanceled__c</field>
            <operation>equals</operation>
        </filters>
        <label>Bank Reconciliation - Available</label>
    </listViews>
    <listViews>
        <fullName>c2g__BankReconciliationReconciled</fullName>
        <columns>c2g__BankAccount__c</columns>
        <columns>c2g__BankAccountValue__c</columns>
        <columns>c2g__Account__c</columns>
        <columns>c2g__LineDescription__c</columns>
        <columns>c2g__BankReconciliation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__BankAccount__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>c2g__BankReconciliation__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Bank Reconciliation - Reconciled</label>
    </listViews>
    <listViews>
        <fullName>c2g__JournalTransactionLineItems</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4 OR 5)</booleanFilter>
        <columns>c2g__OwnerCompany__c</columns>
        <columns>c2g__Transaction__c</columns>
        <columns>c2g__DocumentNumber__c</columns>
        <columns>NAME</columns>
        <columns>c2g__LineNumber__c</columns>
        <columns>c2g__GeneralLedgerAccount__c</columns>
        <columns>c2g__LineDescription__c</columns>
        <columns>c2g__HomeValue__c</columns>
        <columns>c2g__DocumentValue__c</columns>
        <columns>c2g__ReportingValue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__DocumentNumber__c</field>
            <operation>startsWith</operation>
            <value>JNL</value>
        </filters>
        <filters>
            <field>c2g__TransactionDate__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>c2g__HomeValue__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>c2g__DocumentValue__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>c2g__ReportingValue__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Journal TLIs (Deprecated)</label>
    </listViews>
    <listViews>
        <fullName>c2g__TransactionLineItemsWithCurrencyValues</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4)</booleanFilter>
        <columns>c2g__OwnerCompany__c</columns>
        <columns>c2g__Transaction__c</columns>
        <columns>c2g__DocumentValue__c</columns>
        <columns>c2g__HomeCurrency__c</columns>
        <columns>c2g__HomeValue__c</columns>
        <columns>c2g__DualCurrency__c</columns>
        <columns>c2g__DualValue__c</columns>
        <columns>c2g__ReportingCurrency__c</columns>
        <columns>c2g__ReportingValue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__TransactionDate__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>c2g__HomeValue__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>c2g__DocumentValue__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>c2g__ReportingValue__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>With Currency Values</label>
    </listViews>
    <listViews>
        <fullName>ffaws__OverduePayableInvoices</fullName>
        <columns>c2g__Transaction__c</columns>
        <columns>NAME</columns>
        <columns>c2g__Account__c</columns>
        <columns>ffaws__Vendor_Document_Number__c</columns>
        <columns>c2g__DueDate__c</columns>
        <columns>c2g__HomeOutstandingValue__c</columns>
        <columns>c2g__HomeCurrency__c</columns>
        <columns>c2g__GeneralLedgerAccount__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__LineType__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <filters>
            <field>c2g__DueDate__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>ffaws__Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Purchase Invoice</value>
        </filters>
        <filters>
            <field>c2g__MatchingStatus__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filters>
        <label>Overdue Payable Invoices</label>
    </listViews>
    <listViews>
        <fullName>ffaws__PaymentsAwaitingReconciliationListView</fullName>
        <columns>c2g__Transaction__c</columns>
        <columns>NAME</columns>
        <columns>c2g__Account__c</columns>
        <columns>c2g__TransactionDate__c</columns>
        <columns>c2g__HomeValue__c</columns>
        <columns>c2g__HomeCurrency__c</columns>
        <columns>c2g__BankAccount__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__LineType__c</field>
            <operation>equals</operation>
            <value>Analysis</value>
        </filters>
        <filters>
            <field>ffaws__Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Cash</value>
        </filters>
        <filters>
            <field>ffaws__CashEntryType__c</field>
            <operation>equals</operation>
            <value>Payment,Payment Refund</value>
        </filters>
        <filters>
            <field>c2g__BankReconciliationStatus__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>Payments Awaiting Bank Reconciliation</label>
    </listViews>
    <listViews>
        <fullName>ffaws__UnmatchedCashPayments</fullName>
        <columns>c2g__Transaction__c</columns>
        <columns>NAME</columns>
        <columns>c2g__Account__c</columns>
        <columns>c2g__HomeOutstandingValue__c</columns>
        <columns>c2g__HomeCurrency__c</columns>
        <columns>c2g__GeneralLedgerAccount__c</columns>
        <columns>ffaws__CashEntryType__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__LineType__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <filters>
            <field>c2g__HomeOutstandingValue__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ffaws__CashEntryType__c</field>
            <operation>equals</operation>
            <value>Payment,Payment Refund</value>
        </filters>
        <label>Unmatched Cash Payments</label>
    </listViews>
    <listViews>
        <fullName>ffaws__UnmatchedCashReceipts</fullName>
        <columns>c2g__Transaction__c</columns>
        <columns>NAME</columns>
        <columns>c2g__Account__c</columns>
        <columns>c2g__HomeValue__c</columns>
        <columns>c2g__HomeOutstandingValue__c</columns>
        <columns>c2g__HomeCurrency__c</columns>
        <columns>c2g__GeneralLedgerAccount__c</columns>
        <columns>ffaws__CashEntryType__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__LineType__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <filters>
            <field>c2g__HomeOutstandingValue__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ffaws__CashEntryType__c</field>
            <operation>equals</operation>
            <value>Refund,Receipt</value>
        </filters>
        <label>Unmatched Cash Receipts</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>